--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "is-data-descriptor": "^0.1.4"
   },
   "devDependencies": {
+    "@fancyapps/fancybox": "^3.5.7",
     "browser-sync": "^2.26.14",
     "del": "^6.0.0",
     "gulp": "^4.0.2",
