--- a/package.json
+++ b/package.json
@@ -14,19 +14,20 @@
     "get-intrinsic": "^1.1.1",
     "get-value": "^2.0.6",
     "graceful-fs": "^4.2.6",
-    "has-symbols": "^1.0.2",
     "has": "^1.0.3",
+    "has-symbols": "^1.0.2",
     "hosted-git-info": "^2.8.9",
     "inherits": "^2.0.4",
     "ini": "^1.3.8",
     "interpret": "^1.4.0",
     "invert-kv": "^1.0.0",
-    "is-binary-path": "^1.0.1",
     "is-accessor-descriptor": "^0.1.6",
     "is-arrayish": "^0.2.1",
+    "is-binary-path": "^1.0.1",
     "is-buffer": "^1.1.6",
     "is-core-module": "^2.4.0",
-    "is-data-descriptor": "^0.1.4"
+    "is-data-descriptor": "^0.1.4",
+    "jquery-form-styler": "^2.0.2"
   },
   "devDependencies": {
     "@fancyapps/fancybox": "^3.5.7",
@@ -38,6 +39,7 @@
     "gulp-imagemin": "^7.1.0",
     "gulp-sass": "^4.1.0",
     "gulp-uglify": "^3.0.2",
+    "ion-rangeslider": "^2.3.1",
     "jquery": "^3.6.0",
     "rateyo": "^2.3.2",
     "slick-carousel": "^1.8.1"
